--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "parcel index1.html",
     "build": "parcel build index1.html",
     "predeploy":"npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
