--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "homepage":"https://sachinpathak123.github.io/Food-app",
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
@@ -17,9 +15,7 @@
   "scripts": {
     "test": "jest",
     "start": "parcel index1.html",
-    "build": "parcel build index1.html",
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build index1.html"
   },
   "repository": {
     "type": "git",
